src/objects/CH_CAPSPriority__mdt.object
<CustomObject>
    <description>This will be used to store the priority for attachment processing by CAPS System.</description>
    <fields>
        <fullName>CH_Otage__c</fullName>
        <label>Otage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Priority__c</fullName>
        <label>Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Information Request</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Responded in Progress</fullName>
                </value>
                <value>
                    <fullName>Restoration Provided</fullName>
                </value>
                <value>
                    <fullName>Solution Provided</fullName>
                </value>
                <value>
                    <fullName>Temp Sol. Provided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CH_CAPSPriority</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>CH_Otage__c</columns>
        <columns>CH_Priority__c</columns>
        <columns>CH_Severity__c</columns>
        <columns>CH_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>CH_CAPSPriority</pluralLabel>
</CustomObject>